fix image flicker on page load

--- a/css/about.css
+++ b/css/about.css
@@ -54,9 +54,10 @@ main {
 }
 
 img {
-    opacity: 0.67;
     border-radius: 1rem;
     margin: 1rem;
+    opacity: 1;
+    transition: opacity 0.5s ease-in;
 }
 
 img.left {
@@ -71,6 +72,10 @@ img.right {
 
 img.center {
     margin: auto;
+}
+
+img.hidden {
+    opacity: 0;
 }
 
 p {
